Colaboratory を使用して作成しました

--- a/cpp_atcoder100.ipynb
+++ b/cpp_atcoder100.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "cpp_atcoder100.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPrEYB8eMPlY0jaDzsVp3O7",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPnjKNNMLsE8/gIVpGzyzug",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2187,7 +2188,7 @@
         },
         "outputId": "654d2d44-ac3f-4540-c040-05eb125ca189"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2210,7 +2211,7 @@
         "id": "KDVc_hLwlMRR",
         "outputId": "cd2b0bd6-cfdb-453e-fb1a-73139e1dedb5"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2271,7 +2272,7 @@
         "id": "YratUtS-klpx",
         "outputId": "2bab782f-91d5-4d60-c633-071e61868d47"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2294,7 +2295,7 @@
         "id": "YbgfpNhyl_uG",
         "outputId": "5dd6c026-5f31-4829-ac19-879a8f6b972f"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2351,7 +2352,7 @@
         "id": "hXjDYAqDlw68",
         "outputId": "e0602139-2a57-4668-f40c-4f366feb66dd"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2374,7 +2375,7 @@
         "id": "UFdknTcsmUHr",
         "outputId": "1d639aa0-11e8-40fc-e63c-01cffbeb4c4e"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2438,7 +2439,7 @@
         "id": "dp90uBl1mS1e",
         "outputId": "1ef6e148-f1d8-4059-b74e-5067e3ba9ab9"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2461,7 +2462,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2473,44 +2474,33 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "5tCHBN-7mXxt"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
-        "map\n",
-        "どんな「番地」にも書き込める、無限配列のようなデータ構造です。\n",
-        "例えば、int A[100000] という配列を定義すれば、0 ～ 99999 番地までにしか書き込むことができません。\n",
-        "一方で、map を使えば、配列の番地として int 型だけではなく、string 型や後述する pair 型まで使えます。\n",
-        "a を map 型の変数、x を適当な型の変数とします。map というデータ構造は、以下の処理ができます。\n",
+        "# map 連想配列 associative array\n",
+        "# どんな「番地」にも書き込める、無限配列のようなデータ構造です。\n",
+        "# 例えば、int A[100000] という配列を定義すれば、0 ～ 99999 番地までにしか書き込むことができません。\n",
+        "# 一方で、map を使えば、配列の番地として int 型だけではなく、string 型や後述する pair 型まで使えます。\n",
+        "# a を map 型の変数、x を適当な型の変数とします。map というデータ構造は、以下の処理ができます。\n",
         "\n",
-        "プログラム\t説明\n",
-        "a[x]\tマップの x という番地にアクセスする感じだと思ってよいです。配列と同じように、代入・演算ができます。x は整数型でなくても、文字列型でも vector 型でも何でもありです。\n",
-        "a.clear()\tマップ a を初期化します。\n",
-        "なお、最初は値がすべて 0（文字列の場合は空文字列）で初期化されています。\n",
-        "NN を今まで map 型変数にアクセスした数とするとき、マップのある特定の番地へのアクセスにかかる計算量は O(logN)O(log⁡N) 程度です。map をインクルードすることで使えます。\n",
+        "# a[x]\tマップの x という番地にアクセスする感じだと思ってよいです。\n",
+        "# 配列と同じように、代入・演算ができます。x は整数型でなくても、文字列型でも vector 型でも何でもありです。\n",
+        "# a.clear()\tマップ a を初期化します。\n",
+        "# なお、最初は値がすべて 0（文字列の場合は空文字列）で初期化されています。\n",
+        "# N を今まで map 型変数にアクセスした数とするとき、マップのある特定の番地へのアクセスにかかる計算量は O(logN) 程度です。\n",
         "\n",
-        "変数の定義\n",
-        "変数の定義方法がやや特殊なので、書いておきます。基本的に、map< 番地の型, 記録する型 > となります。\n",
+        "# 変数の定義方法がやや特殊なので、書いておきます。基本的に、map< 番地の型, 記録する型 > となります。\n",
         "\n",
-        "// int 型の番地に int 型の変数を記録する場合（2^31 要素の int 型配列と同じような感じ）\n",
-        "map<int, int> M1;\n",
+        "# // int 型の番地に int 型の変数を記録する場合（2^31 要素の int 型配列と同じような感じ）\n",
+        "# map<int, int> M1;\n",
         "\n",
-        "// int 型の番地に string 型の変数を記録する場合（2^31 要素の string 型配列と同じような感じ）\n",
-        "map<int, string> M2;\n",
+        "# // int 型の番地に string 型の変数を記録する場合（2^31 要素の string 型配列と同じような感じ）\n",
+        "# map<int, string> M2;\n",
         "\n",
-        "// string 型の番地に double 型の変数を記録する場合\n",
-        "map<string, double> M3;\n",
-        "サンプルコード\n",
-        "#include <iostream>\n",
-        "#include <string>\n",
-        "#include <map>\n",
+        "# // string 型の番地に double 型の変数を記録する場合\n",
+        "# map<string, double> M3;\n",
+        "\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
         "int main() {\n",
@@ -2521,28 +2511,73 @@
         "\n",
         "    cout << Map[\"algorithm\"] << endl; // 1111 と出力される\n",
         "    cout << Map[\"tourist\"] << endl; // まだ何も書き込まれていないので、0 と出力される\n",
-        "    return 0;\n",
-        "}\n",
-        "3-16. lower_bound\n",
-        "二分探索 をすることができる関数です。\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "LVH0plS9qgxl",
+        "outputId": "b877fd98-4112-4e91-d683-642cf6fdb5ca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo  |./a.out"
+      ],
+      "metadata": {
+        "id": "t_lFiKhZBxTj",
+        "outputId": "748000ab-62be-4bca-d1b3-30b2893d86f8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1111\n",
+            "0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# lower_bound\n",
+        "# 二分探索 をすることができる関数です。\n",
+        "# 配列 a があったとして、a の l 番目から r-1 番目までの要素が小さい順にソートされていたとしましょう。\n",
+        "# そのとき、lower_bound(a+l, a+r, x) - a というプログラムは、\n",
+        "# a[l] から a[r-1] までの中で初めて x 以上となるようなインデックスを返します。\n",
+        "# つまり、l ≤ i ≤ r−1 の中で、x ≤ a となるような最小の i の値を返します。\n",
+        "# 例えば、a = {2, 3, 4, 6, 9, ...} の場合、lower_bound(a, a + 5, 7) - a = 4 となります。\n",
+        "# 計算量は O(log N) です。\n",
         "\n",
-        "概要\n",
-        "配列 a があったとして、a の l 番目から r-1 番目までの要素が小さい順にソートされていたとしましょう。\n",
-        "\n",
-        "そのとき、lower_bound(a+l, a+r, x) - a というプログラムは、\n",
-        "\n",
-        "a[l] から a[r-1] までの中で初めて x 以上となるようなインデックスを返します。\n",
-        "つまり、l≤i≤r−1l≤i≤r−1 の中で、x≤aix≤ai となるような最小の ii の値を返します。\n",
-        "例えば、a = {2, 3, 4, 6, 9, ...} の場合、lower_bound(a, a + 5, 7) - a = 4 となります。\n",
-        "計算量は O(log N)O(log⁡ N) です。algorithm をインクルードすることで使えます。\n",
-        "\n",
-        "サンプルコード\n",
-        "#include <iostream>\n",
-        "#include <algorithm>\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
         "int main() {\n",
+        "    vector<int> a {2, 3, 100, 2, 3};\n",
+        "    sort(a.begin(), a.end());\n",
+        "    cout << lower_bound(a.begin(), a.end(), 100) - a.begin() << endl;\n",
+        "\n",
         "    // 例 1: a[i] < x となるような i が何個あるのかを O(log N) で計算する\n",
+        "    /*\n",
         "    int N, a[100009];\n",
         "    cin >> N;\n",
         "    for (int i = 0; i < N; i++) cin >> a[i];\n",
@@ -2551,35 +2586,76 @@
         "    int x;\n",
         "    cin >> x;\n",
         "    cout << lower_bound(a, a + N, x) - a << endl;\n",
-        "    return 0;\n",
-        "}\n",
-        "3-17. set\n",
-        "集合を管理することができるデータ構造です。集合に要素を追加したり、削除したり、二分探索したりできます。このようなデータ構造には、set と multiset の 2 種類があります。\n",
+        "    */\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "vjNYkuTLBsEq",
+        "outputId": "c912b9b2-20c1-42bd-e80b-74a6a83b8ff8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo  |./a.out"
+      ],
+      "metadata": {
+        "id": "T_n5rsJmFpzk",
+        "outputId": "edd2ff19-d08d-4796-dd84-43916c961db4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# set\n",
+        "# 集合を管理することができるデータ構造です。集合に要素を追加したり、削除したり、\n",
+        "# 二分探索したりできます。このようなデータ構造には、set と multiset の 2 種類があります。\n",
+        "# set 型の変数 a と、適当な型の変数または値 x があったとして、以下の処理ができます。\n",
+        "# （ここでは、y は set 内の要素を指すイテレーターとします。）\n",
+        "# a.insert(x)\t集合 a に要素 x を追加する。但し、既に x が集合 a にある場合は追加しない。\n",
+        "# （multiset の場合、既に要素が 1 個以上あっても追加する。）\n",
+        "# a.erase(x)\t集合 a から要素 x を削除する。（multiset の場合、要素 x をすべて削除する。）\n",
+        "# a.erase(y)\t集合 a からイテレーター y の要素を削除する。\n",
+        "# （この場合、multiset の場合でも 1 個だけ消すことができる。）\n",
+        "# a.lower_bound(x)\t集合 a の中で x 以上である最小の要素を指すイテレーターを返す。\n",
+        "# a.clear()\t集合 a を空にする。\n",
+        "# N 個の要素を持つ set に対する操作の計算量は、大体の操作で O(log N) です。（multiset も同様。）\n",
         "\n",
-        "概要\n",
-        "set 型の変数 a と、適当な型の変数または値 x があったとして、以下の処理ができます。（ここでは、y は set 内の要素を指すイテレーターとします。）\n",
+        "# なお、set 内では小さい順に要素が並んでいます。そのため、イテレーター itr に対し\n",
+        "# itr++ とすると、set 内の一つ大きい要素を指すようになります\n",
+        "# 例えば a = {2,3,4,6,8} で元々 (*itr) = 6 の場合、itr++ をすると itr は 8 を指すようになる\n",
+        "# itr-- とすると set 内の一つ小さい要素を指すようになります\n",
+        "# 例えば a = {2,3,4,6,8} で元々 (*itr) = 6 の場合、itr-- をすると itr は 4 を指すようになる\n",
+        "# また、a.begin() は set 内の先頭のイテレーター、a.end() は set 内の末尾のイテレーターを指します。\n",
         "\n",
-        "プログラム\t説明\n",
-        "a.insert(x)\t集合 a に要素 x を追加する。但し、既に x が集合 a にある場合は追加しない。\n",
-        "（multiset の場合、既に要素が 1 個以上あっても追加する。）\n",
-        "a.erase(x)\t集合 a から要素 x を削除する。（multiset の場合、要素 x をすべて削除する。）\n",
-        "a.erase(y)\t集合 a からイテレーター y の要素を削除する。\n",
-        "（この場合、multiset の場合でも 1 個だけ消すことができる。）\n",
-        "a.lower_bound(x)\t集合 a の中で x 以上である最小の要素を指すイテレーターを返す。\n",
-        "a.clear()\t集合 a を空にする。\n",
-        "NN 個の要素を持つ set に対する操作の計算量は、大体の操作で O(log N)O(log N) です。（multiset も同様。）\n",
-        "\n",
-        "なお、set 内では小さい順に要素が並んでいます。そのため、イテレーター itr に対し\n",
-        "\n",
-        "itr++ とすると、set 内の一つ大きい要素を指すようになります\n",
-        "例えば a = {2,3,4,6,8} で元々 (*itr) = 6 の場合、itr++ をすると itr は 8 を指すようになる\n",
-        "itr-- とすると set 内の一つ小さい要素を指すようになります\n",
-        "例えば a = {2,3,4,6,8} で元々 (*itr) = 6 の場合、itr-- をすると itr は 4 を指すようになる\n",
-        "また、a.begin() は set 内の先頭のイテレーター、a.end() は set 内の末尾のイテレーターを指します。少し難しいので、もしわからなければこちらを読むと良いと思います。set をインクルードすることで使えます。\n",
-        "\n",
-        "サンプルコード\n",
-        "#include <iostream>\n",
-        "#include <set>\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
         "int main() {\n",
@@ -2588,7 +2664,8 @@
         "    Set.insert(37); // その時点での Set の要素は {37}\n",
         "    Set.insert(15); // その時点での Set の要素は {15, 37}\n",
         "    Set.insert(37); // その時点での Set の要素は {15, 37}\n",
-        "    auto itr1 = Set.lower_bound(40);\n",
+        "    auto itr1 = Set.lower_bound(40); // => \"End\"\n",
+        "    // auto itr1 = Set.lower_bound(30); // => 37\n",
         "    if (itr1 == Set.end()) cout << \"End\" << endl;\n",
         "    else cout << (*itr1) << endl;\n",
         "    Set.erase(37); // その時点での Set の要素は {15}\n",
@@ -2607,29 +2684,80 @@
         "        cout << (*itr) << endl;\n",
         "        itr++;\n",
         "    }\n",
-        "    return 0;\n",
-        "}\n",
-        "3-18. pair\n",
-        "pair は 2 つの異なる型を一つの変数で持つことができる「組」を表現できる型です。\n",
         "\n",
-        "概要\n",
-        "pair は 2 つの要素を持てる型です。a を pair 型の変数とするとき、\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "POJkqPKHFXIs",
+        "outputId": "239aefca-5299-4c74-e087-41fa814b436e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo 3 1 3 8 |./a.out"
+      ],
+      "metadata": {
+        "id": "TIbsUsuUHwid",
+        "outputId": "a42a2352-0eca-4c8c-a730-8bf8f0a3f32a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "37\n",
+            "46\n",
+            "1\n",
+            "3\n",
+            "8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "5tCHBN-7mXxt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# pair\n",
+        "# pair は 2 つの異なる型を一つの変数で持つことができる「組」を表現できる型です。\n",
+        "# pair は 2 つの要素を持てる型です。a を pair 型の変数とするとき、\n",
+        "# 1 つ目の要素は a1.first\n",
+        "# 2 つ目の要素は a1.second\n",
+        "# で表されます。また、1 つ目の要素の型を v1, 2 つ目の要素の型を v2 とするとき、\n",
+        "# pair< v1, v2 > a; という感じで変数を定義できます。\n",
+        "# 例えば、両方 int 型にしたい場合は pair< int, int > a; という感じで変数を定義できます。\n",
+        "# 2 つの pair 型要素の大小比較は、以下のように決められます。\n",
+        "# 1 つ目の要素が小さい方を小さいとみなす。\n",
+        "# 1 つ目の要素が同じである場合、2 つ目の要素が小さい方を小さいとみなす。\n",
         "\n",
-        "1 つ目の要素は a1.first\n",
-        "2 つ目の要素は a1.second\n",
-        "で表されます。また、1 つ目の要素の型を v1, 2 つ目の要素の型を v2 とするとき、pair< v1, v2 > a; という感じで変数を定義できます。例えば、両方 int 型にしたい場合は pair< int, int > a; という感じで変数を定義できます。\n",
-        "\n",
-        "2 つの pair 型要素の大小比較は、以下のように決められます。\n",
-        "\n",
-        "1 つ目の要素が小さい方を小さいとみなす。\n",
-        "1 つ目の要素が同じである場合、2 つ目の要素が小さい方を小さいとみなす。\n",
-        "なお、pair 型は追加のインクルードファイル無しで使えます。（本来は utility ファイル内の型ですが、実際にはインクルードしなくても使えたりします。）\n",
-        "\n",
-        "サンプルコード\n",
-        "#include <iostream>\n",
-        "#include <algorithm>\n",
-        "#include <string>\n",
-        "#include <functional>\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
         "int N;\n",
@@ -2647,23 +2775,69 @@
         "        cout << \"Name = \" << a[i].second << \", Score = \" << a[i].first << endl;\n",
         "    }\n",
         "    return 0;\n",
-        "}\n",
-        "3-19. tuple\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "FAzXwoE5HbWi",
+        "outputId": "d88bb098-514b-4e7a-da12-573ec881b864",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo 2 \"Bob\" 1 \"John\" 8 |./a.out"
+      ],
+      "metadata": {
+        "id": "pV_4mq-oP5ko",
+        "outputId": "4106bf32-98cb-4a82-c225-e8280f37b251",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Name = John, Score = 8\n",
+            "Name = Bob, Score = 1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tuple\n",
         "3 つ以上の要素から成る「組」を持つことができる型です。pair 型は 2 つですが、tuple 型は何個でも要素を持てます。\n",
-        "\n",
-        "概要\n",
         "tuple 型は、3 つ以上の要素を持てる型です。（※ 1 つとか 2 つでもできます。）\n",
         "以下の 3 つの構文を覚えておくと、競技プログラミングなどにおいて困ることはほぼ無いと思います。\n",
-        "\n",
-        "型 v1, 型 v2, ..., 型 vn を持つ tuple 型変数を定義したい場合、tuple< v1,v2,...,vn > a; という感じのコードを書くと良いです。例えば、int 型, int 型, string 型から成る tuple 型変数を定義したい場合、tuple< int,int,string > a; などと書きます。\n",
-        "tuple 型変数 a の i 個目の要素にアクセスしたい場合、get< i >(a) と書けば良いです。0 個目の要素から始まることに注意してください。\n",
-        "make_tuple(a1,a2,...,an) で引数のコピーから tuple を生成することができます。（サンプルコードの最後から 6 行目を参照。）\n",
+        "型 v1, 型 v2, ..., 型 vn を持つ tuple 型変数を定義したい場合、tuple< v1,v2,...,vn > a; \n",
+        "という感じのコードを書くと良いです。例えば、int 型, int 型, string 型から成る tuple \n",
+        "型変数を定義したい場合、tuple< int,int,string > a; などと書きます。\n",
+        "tuple 型変数 a の i 個目の要素にアクセスしたい場合、get< i >(a) と書けば良いです。\n",
+        "0 個目の要素から始まることに注意してください。\n",
+        "make_tuple(a1,a2,...,an) で引数のコピーから tuple を生成することができます。\n",
         "なお、2 つの tuple 型要素の大小比較は、以下のようにして決まります。\n",
         "\n",
         "0 個目の要素が小さい方を小さいとみなす。\n",
         "0 個目の要素が同じである場合、1 個目の要素が小さい方を小さいとみなす。\n",
         "1 個目の要素も同じである場合、2 個目の要素が小さい方を小さいとみなす。（以下続く）\n",
-        "tuple をインクルードすることで使えます。\n",
+        "\n",
         "\n",
         "サンプルコード\n",
         "#include <iostream>\n",
@@ -3000,7 +3174,7 @@
         "コメント\n"
       ],
       "metadata": {
-        "id": "LVH0plS9qgxl"
+        "id": "yIIS7IjSP0wm"
       },
       "execution_count": null,
       "outputs": []
