Colaboratory を使用して作成しました

--- a/cpp_atcoder100.ipynb
+++ b/cpp_atcoder100.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_atcoder100.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNaoQIpkYkxmatIM7mCOBmq",
+      "authorship_tag": "ABX9TyMGds8hHABc6LzcAvnD4Q+s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2844,10 +2844,10 @@
       ],
       "metadata": {
         "id": "yIIS7IjSP0wm",
-        "outputId": "09980f10-d033-4ebd-8de8-18b530f3c018",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "09980f10-d033-4ebd-8de8-18b530f3c018"
       },
       "execution_count": 2,
       "outputs": [
@@ -2867,10 +2867,10 @@
       ],
       "metadata": {
         "id": "_FoZhBz4Z_si",
-        "outputId": "8b267305-7099-405a-cc84-b15e4670d037",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8b267305-7099-405a-cc84-b15e4670d037"
       },
       "execution_count": 3,
       "outputs": [
@@ -2884,15 +2884,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "5tCHBN-7mXxt"
-      }
     },
     {
       "cell_type": "code",
@@ -2909,9 +2900,20 @@
         "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
-        "int N, X, cnt, a[10009];\n",
-        "\n",
         "int main() {\n",
+        "    int N, X, cnt = 0;\n",
+        "    vector<int> a(1000);\n",
+        "    cin >> N >> X;\n",
+        "    for (int i = 0; i < N; i++) cin >> a.at(i);\n",
+        "    assert(N <= 10000);\n",
+        "\n",
+        "    for (int i = 0; i < N - 1; i++) {\n",
+        "        for (int j = i + 1; j < N; j++) {\n",
+        "            if (a.at(i) + a.at(j) == X) cnt++;\n",
+        "        }\n",
+        "    }\n",
+        "    cout << cnt << endl;\n",
+        "/*\n",
         "    // 例 1: a[i] + a[j] = X を満たす (i, j) [i < j] の個数を列挙する\n",
         "    // N > 10000 の場合実行時間が間に合わない（TLE する）のでランタイムエラーを起こすようにする\n",
         "\n",
@@ -2925,16 +2927,17 @@
         "        }\n",
         "    }\n",
         "    cout << cnt << endl;\n",
+        "*/    \n",
         "}"
       ],
       "metadata": {
         "id": "-XaIgDylZ-c_",
-        "outputId": "7485956f-e70d-4e6e-8011-535aa061d8ef",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "922afd77-2c79-4905-ca4b-7fa48c7392da"
       },
-      "execution_count": 8,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -2948,16 +2951,16 @@
     {
       "cell_type": "code",
       "source": [
-        "!g++ temp.cpp; echo 4 8 1 7 2 6 3 5 |./a.out"
+        "!g++ temp.cpp; echo 6 8 1 7 2 6 3 5 |./a.out"
       ],
       "metadata": {
-        "id": "HTVkvY-F7GKh",
-        "outputId": "c6dee9a7-959b-41f7-eda2-c1bc450e5340",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HTVkvY-F7GKh",
+        "outputId": "3be774cc-b212-4e00-ca68-b5f7db2721aa"
       },
-      "execution_count": 14,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -2969,17 +2972,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "5tCHBN-7mXxt"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "count\n",
-        "配列や vector のある区間の要素の中で、x がいくつ含まれるかを返す関数です。\n",
-        "ここでは、a を配列とします。そのとき、count(a + l, a + r, x) は a[l], a[l+1], ..., a[r-1] の中で、\n",
-        "x となるようなものの個数を整数型で返します。vector の場合、count(v.begin(), v.end(), x) のように書けばよいです。\n",
-        "計算量は O(r−l)O です。\n",
+        "# count\n",
+        "# 配列や vector のある区間の要素の中で、x がいくつ含まれるかを返す関数です。\n",
+        "# ここでは、a を配列とします。そのとき、count(a + l, a + r, x) は a[l], a[l+1], ..., a[r-1] の中で、\n",
+        "# x となるようなものの個数を整数型で返します。vector の場合、count(v.begin(), v.end(), x) のように書けばよいです。\n",
+        "# 計算量は O(r−l)O です。\n",
         "\n",
-        "サンプルコード\n",
-        "#include <iostream>\n",
-        "#include <algorithm>\n",
+        "%%writefile temp.cpp\n",
+        "#include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
         "int main() {\n",
@@ -2999,9 +3010,41 @@
         "        cin >> l >> r >> x;\n",
         "        cout << count(b + l, b + r + 1, x) << endl;\n",
         "    }\n",
-        "    return 0;\n",
-        "}\n",
-        "3-22. find\n",
+        "}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zN3Am4y87BHm",
+        "outputId": "3c9b3336-4ac4-4d91-b62d-b1595911bc6f"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo 6 8 1 7 2 6 3 5 |./a.out"
+      ],
+      "metadata": {
+        "id": "WJJ5P1lNF8Rx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "find\n",
         "配列や vector のある区間の要素の中に x が含まれるか、含まれる場合はどこにあるかを返す関数です。\n",
         "\n",
         "概要\n",
@@ -3249,7 +3292,7 @@
         "コメント\n"
       ],
       "metadata": {
-        "id": "zN3Am4y87BHm"
+        "id": "09inE3HuF3nx"
       },
       "execution_count": null,
       "outputs": []
