Colaboratory を使用して作成しました

--- a/cpp_atcoder100.ipynb
+++ b/cpp_atcoder100.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_atcoder100.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO0t5+mp2dHpBzW2+uy820G",
+      "authorship_tag": "ABX9TyNPQdGmgpf442KvGQSp2Znf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2972,15 +2972,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "5tCHBN-7mXxt"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# count\n",
@@ -3000,14 +2991,14 @@
         "    cout << count(a, a + 10, 2) << endl;\n",
         "\n",
         "    int N, Q;\n",
-        "    vector<int> b;\n",
         "    cin >> N;\n",
-        "    for (int i = 0; i < N; i) cin >> b.at(i);\n",
+        "    vector<int> b(N);\n",
+        "    for (int i = 0; i < N; i++) cin >> b.at(i);\n",
         "    cin >> Q;\n",
-        "    for (int i = 0; i < N; i++){\n",
+        "    for (int i = 0; i < Q; i++){\n",
         "        int l, r, x;\n",
         "        cin >> l >> r >> x;\n",
-        "        cout << count(b.begin()+l, b.begin() + r, x);\n",
+        "        cout << count(b.begin()+l, b.begin() + r+1, x) << endl;;\n",
         "    }\n",
         "\n",
         "/*\n",
@@ -3029,9 +3020,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zN3Am4y87BHm",
-        "outputId": "622a18ac-f005-4eca-adfa-373007fb2ef6"
+        "outputId": "322495eb-bde8-45a1-dd46-5d6a7a0c0afc"
       },
-      "execution_count": 46,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "stream",
@@ -3049,12 +3040,12 @@
       ],
       "metadata": {
         "id": "WJJ5P1lNF8Rx",
-        "outputId": "8eb75462-208c-4177-8f6e-83a1cd791f47",
+        "outputId": "ab4f938b-6810-4b6d-cb59-cc1b17dfef59",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 47,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "stream",
@@ -3062,30 +3053,36 @@
           "text": [
             "4\n",
             "3\n",
-            "terminate called after throwing an instance of 'std::out_of_range'\n",
-            "  what():  vector::_M_range_check: __n (which is 0) >= this->size() (which is 0)\n",
-            "/bin/bash: line 1:   812 Done                    echo 10 1 2 3 4 1 2 3 1 2 1 2 0 9 1 0 9 2\n",
-            "       813 Aborted                 (core dumped) | ./a.out\n"
+            "1\n",
+            "4\n",
+            "3\n"
           ]
         }
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "5tCHBN-7mXxt"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "find\n",
-        "配列や vector のある区間の要素の中に x が含まれるか、含まれる場合はどこにあるかを返す関数です。\n",
+        "# find\n",
+        "# 配列や vector のある区間の要素の中に x が含まれるか、含まれる場合はどこにあるかを返す関数です。\n",
+        "# a を配列とします。そのとき、find(a + l, a + r, x) は、以下のイテレーターを返します。\n",
+        "# a[l], a[l+1], ..., a[r-1] の中に x が含まれない場合は a + r のイテレーター。\n",
+        "# そうでない場合は、a[l] から順に見ていったときに初めて a[i] = x となるような a[i] のイテレーター。\n",
+        "# a が vector の場合にも使えます。find(a.begin(), a.end(), x) とすると、関数は以下のイテレーターを返します。\n",
         "\n",
-        "概要\n",
-        "a を配列とします。そのとき、find(a + l, a + r, x) は、以下のイテレーターを返します。\n",
-        "\n",
-        "a[l], a[l+1], ..., a[r-1] の中に x が含まれない場合は a + r のイテレーター。\n",
-        "そうでない場合は、a[l] から順に見ていったときに初めて a[i] = x となるような a[i] のイテレーター。\n",
-        "a が vector の場合にも使えます。find(a.begin(), a.end(), x) とすると、関数は以下のイテレーターを返します。\n",
-        "\n",
-        "a[0], a[1], ..., a[a.size() - 1] の中に x が含まれない場合　a.end()。\n",
-        "そうでない場合、初めて a[i] = x となるような a[i] のイテレーター。\n",
-        "なお、find 関数はイテレーターを返しますが、初めて現れる位置を知りたい場合は、find(a + l, a + r, x) - a のように書くと、「初めて x が現れるのは配列の何番目の要素か」を返します。計算量は O(r−l)O(r−l) です。algorithm をインクルードすることで使えます。\n",
+        "# a[0], a[1], ..., a[a.size() - 1] の中に x が含まれない場合　a.end()。\n",
+        "# そうでない場合、初めて a[i] = x となるような a[i] のイテレーター。\n",
+        "# なお、find 関数はイテレーターを返しますが、初めて現れる位置を知りたい場合は、find(a + l, a + r, x) - a のように書くと、\n",
+        "# 「初めて x が現れるのは配列の何番目の要素か」を返します。計算量は O(r−l) です。\n",
         "\n",
         "サンプルコード\n",
         "#include <iostream>\n",
