Colaboratory を使用して作成しました

--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -6,7 +6,7 @@
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOHTfvQJ50YEcdbIQAosTV9",
+      "authorship_tag": "ABX9TyNQE/A9funH8mqPTpHU7Sfm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,6 +36,8 @@
         "\n",
         "leartypescript.ipynb をコピペした。消すかもしれない。\n",
         "\n",
+        "https://typescriptbook.jp/ サバイバル TypeScript\n",
+        "\n",
         "qiita AtCoder Beginners Selection 解答例【TypeScript】\n",
         "\n",
         "mdm web docs javascript\n",
@@ -58,7 +60,7 @@
       "metadata": {
         "id": "cvDmmwL1W8Wl"
       },
-      "execution_count": 117,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -244,10 +246,22 @@
         "console.log(checkGuess(3,4));"
       ],
       "metadata": {
-        "id": "zhbUQ5NlKE66"
+        "id": "zhbUQ5NlKE66",
+        "outputId": "f3652a31-08f0-4a50-f39e-26bb63482383",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing temp.ts\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -256,12 +270,67 @@
       ],
       "metadata": {
         "id": "rpCjE09i1bJg",
-        "outputId": "2e2d67da-6eee-4c56-aaa5-997b7a5849f9",
+        "outputId": "d2f1a40f-8458-484a-da60-6b62ad6054e6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "wrong!!!!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 質問 関数定義を let で出来るか。アロー関数式で書けばいいのか。\n",
+        "%%writefile temp.ts\n",
+        "let checkGuess = (answer : number, guess : number) : string => {\n",
+        "    if (answer == guess) {\n",
+        "        return \"hit!!!!\";\n",
+        "    } else {\n",
+        "        return \"wrong!!!!\";\n",
+        "    }\n",
+        "};\n",
+        "console.log(checkGuess(3,4));"
+      ],
+      "metadata": {
+        "id": "oTWnx-Jw0iCt",
+        "outputId": "9da3b983-2e85-430b-8285-f4fed98e0071",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.ts\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!tsc temp.ts; echo | node temp.js "
+      ],
+      "metadata": {
+        "id": "f2vFWuju0h1u",
+        "outputId": "98903823-7f0b-4cf1-c0d2-0cd4307b19b2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -667,7 +736,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -690,7 +759,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -745,7 +814,7 @@
         "    }\n",
         "}"
       ],
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -768,7 +837,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -779,15 +848,6 @@
             "You're all I want for Christmas\n"
           ]
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "HX6cdlafwp0v"
-      },
-      "source": [
-        "# いまここ"
       ]
     },
     {
@@ -819,7 +879,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -843,7 +903,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -853,6 +913,15 @@
             "Odd\n"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HX6cdlafwp0v"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
@@ -880,7 +949,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -904,7 +973,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -921,78 +990,32 @@
       "metadata": {
         "id": "tJI4HijtYLpt",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 86
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c0280390-afbe-49ae-d00d-05c94f190d39"
+        "outputId": "64ab0a87-e364-4fc7-cbe4-edf432cea297"
       },
       "source": [
         "# 問題 都市名\n",
         "# 最初を大文字に、それ以降を小文字にする。\n",
         "%%writefile temp.ts\n",
-        "/*\n",
-        "const list = document.querySelector(\"#output-area\");\n",
-        "list.innerHTML = '';\n",
-        "document.body.style = \"white-space: pre;\";\n",
-        "\n",
-        "function print (str) {\n",
-        "    let item = document.createElement('div');\n",
-        "    item.textContent = str;\n",
-        "    list.appendChild(item);\n",
-        "};*/\n",
-        "\n",
         "let cities = ['lonDon', 'ManCHESTer', 'BiRmiNGHAM', 'liVERpoOL'];\n",
         "\n",
-        "for(var i = 0; i < cities.length; i++) {\n",
-        "  var input = cities[i];\n",
-        "//   この下にコードを書いて下さい\n",
+        "for (let i = 0; i < cities.length; i++) {\n",
+        "  let input = cities[i];\n",
         "  input = input.toLowerCase();\n",
-        "  head = input[0]\n",
+        "  let head = input[0]\n",
         "  input = input.replace(head, head.toUpperCase());\n",
-        "\n",
-        "  let result = input;\n",
-        "\n",
-        "  print(result);\n",
+        "  console.log(input)\n",
         "}"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
-          "output_type": "display_data",
-          "data": {
-            "application/javascript": [
-              "\n",
-              "const list = document.querySelector(\"#output-area\");\n",
-              "list.innerHTML = '';\n",
-              "document.body.style = \"white-space: pre;\";\n",
-              "\n",
-              "function print (str) {\n",
-              "    let item = document.createElement('div');\n",
-              "    item.textContent = str;\n",
-              "    list.appendChild(item);\n",
-              "};\n",
-              "\n",
-              "let cities = ['lonDon', 'ManCHESTer', 'BiRmiNGHAM', 'liVERpoOL'];\n",
-              "\n",
-              "for(var i = 0; i < cities.length; i++) {\n",
-              "  var input = cities[i];\n",
-              "//   この下にコードを書いて下さい\n",
-              "  input = input.toLowerCase();\n",
-              "  head = input[0]\n",
-              "  input = input.replace(head, head.toUpperCase());\n",
-              "\n",
-              "  let result = input;\n",
-              "\n",
-              "  print(result);\n",
-              "}"
-            ],
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.ts\n"
+          ]
         }
       ]
     },
@@ -1002,10 +1025,85 @@
         "!tsc temp.ts; echo | node temp.js"
       ],
       "metadata": {
-        "id": "bSoSBtpSYL3L"
+        "id": "bSoSBtpSYL3L",
+        "outputId": "bfde090c-d3cd-4042-b9cc-38d2f0ab0f1b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "London\n",
+            "Manchester\n",
+            "Birmingham\n",
+            "Liverpool\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 問題 都市名\n",
+        "# 最初を大文字に、それ以降を小文字にするのを関数化する\n",
+        "%%writefile temp.ts\n",
+        "let cities = ['lonDon', 'ManCHESTer', 'BiRmiNGHAM', 'liVERpoOL'];\n",
+        "\n",
+        "let headCapElseLower = (city : string) : string => {\n",
+        "    return city.toLowerCase().replace(city[0].toLowerCase(), city[0].toUpperCase())\n",
+        "}\n",
+        "\n",
+        "for (let i = 0; i < cities.length; i++) {\n",
+        "    console.log(headCapElseLower(cities[i]))\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "v9vzYlGw3ibT",
+        "outputId": "7333b2af-50fb-4209-b6a6-ad89e5f55197",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.ts\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!tsc temp.ts; echo | node temp.js"
+      ],
+      "metadata": {
+        "id": "mziDNDzH3iXL",
+        "outputId": "6c3520d1-e54f-42e0-b2d5-ec4c1ea03eba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "London\n",
+            "Manchester\n",
+            "Birmingham\n",
+            "Liverpool\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1049,7 +1147,7 @@
         "                'SYB4f65hf75f736463;Stalybridge',\n",
         "                'HUD5767ghtyfyr4536dh45dg45dg3;Huddersfield'];\n",
         "\n",
-        "for (var i = 0; i < stations.length; i++) {\n",
+        "for (let i = 0; i < stations.length; i++) {\n",
         "  let input = stations[i];\n",
         "  // この下にコードを書いてください\n",
         "  head = input.slice(0,3);\n",
